--- a/visvikfrontend/index.html
+++ b/visvikfrontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
      <link rel="icon" type="image/jpeg" href="./public/logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>visvikBusinessSolution</title>
+    <title>visvik.in</title>
   </head>
   <body>
     <div id="root"></div>
